# node-libsharedmemory

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
examples/basic/: README.md  index.js  package-lock.json  package.json
include/: node-sharedmemory.h
lib/: binding.ts
src/: node-libsharedmemory.cc
test/: test_binding.js
